fix: update test duration to 60s in load test scripts and adjust sliding window logic for scaling decisions