@@ -1,13 +1,13 @@
 package org.unifi.api;
 
 import java.io.IOException;
-import java.util.ArrayList;
+import java.util.LinkedList;
 
 import io.kubernetes.client.openapi.ApiException;
 
 public class SlidingWindow extends AbstractUpdater {
 
-    private ArrayList<Integer> replicaHistory;
+    private LinkedList<Integer> replicaHistory;
     private int scalingDecisionWindow;
 
     public SlidingWindow(int length) throws IOException {
@@ -24,48 +24,53 @@ public class SlidingWindow extends AbstractUpdater {
         if (length < 1) {
             length = 1;
         }
-        replicaHistory = new ArrayList<>();
+        replicaHistory = new LinkedList<>();
         this.scalingDecisionWindow = length;
     }
 
     @Override
     public int applyLogic(int newReplicas) {
-        int currentReplicas = 1;
-        try {
-            currentReplicas = scaler.getReplicas();
-        } catch (ApiException ex) {
-            if (!replicaHistory.isEmpty()) {
-                currentReplicas = replicaHistory.getLast();
-            }
-        }
+        final int currentReplicas = getCurrentReplicas();
 
         if (newReplicas > currentReplicas) {
             // Scale up immediately
-            //System.out.println("Scaling up from " + currentReplicas + " to " + newReplicas);
-            //System.out.println("\nRequired scaling: " + scaler.getKind() + " '" + scaler.getScaleName() + "' -> replicas = " + scaler.getReplicas());
             replicaHistory.clear(); // Clear history after scaling
             return newReplicas;
         } else if (newReplicas < currentReplicas) {
             // Scale down lazily
             replicaHistory.add(newReplicas);
             if (replicaHistory.size() > scalingDecisionWindow) {
-                replicaHistory.remove(0);
+                replicaHistory.removeFirst();
             }
             System.out.println("\tReplica recommendation history for scale-down: " + replicaHistory);
 
-            if (replicaHistory.size() == scalingDecisionWindow && replicaHistory.stream().allMatch(r -> r <= newReplicas)) {
-                System.out.println("\tScaling down condition met. Required replicas " + newReplicas + " has been consistent for the last " + scalingDecisionWindow + " iterations.");
-                //System.out.println("\nRequired scaling: " + scaler.getKind() + " '" + scaler.getScaleName() + "' -> replicas = " + scaler.getReplicas());
+            if (replicaHistory.size() == scalingDecisionWindow
+                    && replicaHistory.stream().allMatch(r -> r <= currentReplicas)) {
+                System.out.println("\tScaling down condition met. Required replicas " + newReplicas
+                        + " has been consistent for the last " + scalingDecisionWindow + " iterations.");
                 int maxInHistory = replicaHistory.stream().max(Integer::compareTo).orElse(newReplicas);
                 replicaHistory.clear(); // Clear history after scaling
                 return maxInHistory;
             } else {
-                System.out.println("\tWaiting for stable replica recommendations before scaling down. Current window size: " + replicaHistory.size() + "/" + scalingDecisionWindow);
+                System.out.println(
+                        "\tWaiting for stable replica recommendations before scaling down. Current window size: "
+                                + replicaHistory.size() + "/" + scalingDecisionWindow);
             }
         } else {
+            replicaHistory.add(newReplicas);
             System.out.println("\tNo scaling needed.");
         }
         return currentReplicas;
     }
 
+    private int getCurrentReplicas() {
+        try {
+            return scaler.getReplicas();
+        } catch (ApiException ex) {
+            if (!replicaHistory.isEmpty()) {
+                return replicaHistory.getLast();
+            }
+            return 1;
+        }
+    }
 }
